--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -659,3 +659,27 @@ aui-badge
   text-align: center
 .story-hide
   display: none
+.wp-swimlane-header
+  .subtask-count
+    margin: 0
+    .aui-lozenge
+      text-transform: none
+      border: none
+      font-weight: normal
+.main-title
+  border-bottom: 1px solid #ddd
+  padding: 10px 0
+  h1
+    font-size: 24px
+    display: inline-block
+    vertical-align: middle
+    padding: 0
+    margin-right: 10px
+  p
+    margin: 0
+    display: inline-block
+    vertical-align: middle
+.page-toolbar
+  padding: 10px 0
+  h2
+    font-size: 18px
