--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -39,34 +39,40 @@ See doc/COPYRIGHT.rdoc for more details.
   <%= stylesheet_link_tag 'backlogs/taskboard.css' %>
 <% end %>
 <% html_title @sprint.name %>
-
-<%= toolbar title: @sprint.name do %> 
-  <% if @sprint.has_burndown? %>  
-  <li class="toolbar-item">
-    <div class="tooltips">
-    <a><i class="button--icon icon-time" aria-hidden="true"></i>
-    <% if (DateTime.now <= @sprint.effective_date) %>
-      <%= distance_of_time_in_words(@sprint.effective_date, DateTime.now) %> remaining 
-    <% else %>
-       completed <%= distance_of_time_in_words(@sprint.effective_date, DateTime.now) %> ago
-    <% end %>
-      <ul>
-        <li>Start Date:</li>
-        <li class="space"><%= @sprint.start_date %></li>
-        <li>Projected End Date:</li>
-        <li><%= @sprint.effective_date %></li>
-      </ul> 
-    </a> 
-    </div>
-    </li>
-  <% end %>
-  <% if @sprint.has_burndown? %>
+<div class="main-title">
+  <h1>
+    <%= @sprint.name %>
+  </h1>
+  <p><%= @sprint.description %></p>
+</div>
+<div class="page-toolbar">
+  <%= toolbar title: @project.name do %> 
+    <% if @sprint.has_burndown? %>  
     <li class="toolbar-item">
-      <%= show_burndown_link(@sprint) %>
-    </li>
+      <div class="tooltips">
+      <a><i class="button--icon icon-time" aria-hidden="true"></i>
+      <% if (DateTime.now <= @sprint.effective_date) %>
+        <%= distance_of_time_in_words(@sprint.effective_date, DateTime.now) %> remaining 
+      <% else %>
+        completed <%= distance_of_time_in_words(@sprint.effective_date, DateTime.now) %> ago
+      <% end %>
+        <ul>
+          <li>Start Date:</li>
+          <li class="space"><%= @sprint.start_date %></li>
+          <li>Projected End Date:</li>
+          <li><%= @sprint.effective_date %></li>
+        </ul> 
+      </a> 
+      </div>
+      </li>
+    <% end %>
+    <% if @sprint.has_burndown? %>
+      <li class="toolbar-item">
+        <%= show_burndown_link(@sprint) %>
+      </li>
+    <% end %>
   <% end %>
-<% end %>
-
+</div>
 <% breadcrumb_paths(link_to(l(:label_backlogs), backlogs_project_backlogs_path(@project)), link_to(@sprint.name, backlogs_project_backlogs_path(@sprint))) %>
 
 <div id='rb'>
@@ -98,16 +104,13 @@ See doc/COPYRIGHT.rdoc for more details.
                                 <span class="wp-iconfont wp-iconfont-expanded"></span>
                               </div>                          
                                 <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
-                                    <span class="wp-swimlane-avatar">
-                                    <%= image_tag task_type_icon(story), class: "" %>
-                                    </span>
                                     
                                     <%= work_package_link_or_empty(story) %>
-                                    <span class="wp-info">
-                                        <span class="aui-lozenge"><%= story.status.name %></span>
-                                    </span>
                                     <span class="wp-summary"> 
-                                        <%= story.subject %>
+                                      <strong><%= story.subject %></strong>
+                                    </span>
+                                     <span class="wp-info subtask-count">
+                                        <span class="aui-lozenge"><%= story.tasks.count %> issues</span>
                                     </span>
                                 </div>
                               </div>
